{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "Main",
            "id": "9b7e64f8-7416-4ca3-af10-c90a42ba30bd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "0ef40dc7-bde9-427a-adcc-09a473d2ad5b",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "PassThrough",
                    "id": "7729ae1d-f308-420a-b674-a50a477082b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWorld",
                    "type": "PassThrough",
                    "id": "af022ddc-f426-4af5-8009-1dc267555a4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Continue Dialogue",
                    "type": "PassThrough",
                    "id": "128281c2-344e-486c-aba9-64c4d3510883",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "UseItem",
                    "type": "PassThrough",
                    "id": "f55720a6-c89e-44fd-a1a3-535cb0176f6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ClosePanel",
                    "type": "PassThrough",
                    "id": "6ec253ea-6b82-4898-bed1-7869a67ab68c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "89dd8867-f3a1-420f-bf15-14307740e252",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5bc3c9d4-f916-474a-98b2-973f1c5f1ec7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "69458390-f2f8-471e-8691-8b063abdcc42",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "069e61a3-221b-4459-bac8-ff83e65fb0a5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "20faabdf-f73c-40fb-84fd-6d29c71f9f1c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e6c0f91c-9423-4377-a78b-c04f03ff18b5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25bd2518-bd93-4e5d-9ceb-35270b097f85",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWorld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f81e1db6-82cd-4cfd-aa9b-e6362d93f694",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue Dialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78a63f50-efdf-40c1-ba4e-e51efa60f0d8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0091b532-046e-4c72-a400-59da47d32fa8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClosePanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}